5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1644_1055.log
== SUBMITION (2019-04-16 15:19:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.12945
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.234198
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.123218
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.144491
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.151723
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.11261
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/1055/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.103413
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.116084
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.192187
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else;
	print("nao".lower())

-- EXECUTION TIME:
0.174829
-- ERROR:
  File "/home/codebench/codes/1644/1055/main.py", line 17
    else;
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:19:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v0 = float(input("velocidade inicial: "))
a = radians(float(input("angulo do vetor: ")))
D = float(input("disntacia entre o passaro e o porco: "))
g = 9.8

R = ((v0**2)*(sin(2*a))) / g

tolerancia = abs ( D - R )

if ( tolerancia <= 0.1 ):
	print("sim".lower())
	
else:
	print("nao".lower())

-- EXECUTION TIME:
0.144579
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
